--- a/title.html
+++ b/title.html
@@ -1,9 +1,9 @@
-<title>Jitsi Meet</title>
-<meta property="og:title" content="Jitsi Meet"/>
-<meta property="og:image" content="images/jitsilogo.png?v=1"/>
-<meta property="og:description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta description="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta itemprop="name" content="Jitsi Meet"/>
-<meta itemprop="description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta itemprop="image" content="images/jitsilogo.png?v=1"/>
+<title>Belouga Videochat</title>
+<meta property="og:title" content="Belouga Videochat"/>
+<meta property="og:image" content="images/jitsiLogo_square.png?v=1"/>
+<meta property="og:description" content="Join a virtual meeting powered by Belouga Video"/>
+<meta description="Join a virtual meeting powered by Belouga"/>
+<meta itemprop="name" content="Belouga Videochat"/>
+<meta itemprop="description" content="Join a virtual meeting powered by Belouga Video"/>
+<meta itemprop="image" content="images/jitsiLogo_square.png?v=1"/>
 <link rel="icon" type="image/png" href="images/favicon.ico?v=1"/>
