--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--#include virtual="base.html" -->
 
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="stylesheet" href="css/all.css?v=147">
+    <link rel="stylesheet" href="libs/all.css?v=147">
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (!JitsiMeetJS.app) {
