Cache control on detect_app js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="stylesheet" href="libs/all.css?v=158">
     <link rel="manifest" href="static/pwa/manifest.json">
-    <script src="detect_app.js"></script>
+    <script src="detect_app.js?v=1"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (!JitsiMeetJS.app) {
